tests/testcases/valid/types/12_incomplete_pointer_struct_member.ciel
// Test: Pointer to incomplete type as struct member
// Expected: No error - pointers to incomplete types are allowed

struct ForwardDeclaredStruct;

struct Container {
    struct ForwardDeclaredStruct* member_ptr;
};

struct ForwardDeclaredStruct {

};

int main(){
    return 0;
}
