tests/testcases/invalid/semantic/44_incomplete_function_return_def.ciel
// Test: Incomplete type used as function return type (definition)
// Expected: Error - incomplete type cannot be used as function return type

struct ForwardDeclaredStruct;

struct ForwardDeclaredStruct makeObject() {
}

int main(){
    return 0;
}
